--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
   </header>
   <p class="bemVindo">Welcome to my portifolio.</p>
-  <img class="coracao" src="/img/menorQueTres.svg" alt="menorQueTres">
+  <!-- <img class="coracao" src="/img/menorQueTres.svg" alt="<3"> -->
   <section class="introducao">
     <div class="lista">
       <h2>Dimitri_Freitas_Gomes_da_Silva</h2>
