--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="header">
-    <img src="img/logo.svg" alt="Dimitri-Creative" width="170" height="72">
+    <img src="/img/Logo.svg" alt="Dimitri-Creative" width="170" height="72">
     <nav class="navegacao">
       <ul>
         <li><a href="#projects">Projects</a></li>
