--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
+  <link rel="shortcut icon" href="img/icone.png" type="image/png">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,7 @@
 
 <body>
   <header class="header">
-    <img src="/img/Logo.svg" alt="Dimitri-Creative" width="170" height="72">
+    <img src="./img/logo.svg" alt="Dimitri-Creative" width="170" height="72">
     <nav class="navegacao">
       <ul>
         <li><a href="#projects">Projects</a></li>
