--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-  <link rel="shortcut icon" href="img/icone.png" type="image/png">
+  <link rel="shortcut icon" href="img/icon.png" type="image/png">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 
 <body>
   <header class="header">
-    <img src="./img/logo.svg" alt="Dimitri-Creative" width="170" height="72">
+    <img src="./img/logo.svg" alt="DimitriCreative" width="170" height="72">
     <nav class="navegacao">
       <ul>
         <li><a href="#projects">Projects</a></li>
@@ -44,6 +44,8 @@
       <span>text by: Dimitri</span>
     </div>
   </section>
+
+  <img src="/img/logo.svg" alt="teste">
 
 </body>
 
