one more attempt

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul>
     </nav>
   </header>
-  <p class="bemVindo">Welcome to my portifolio.</p>
+  <p class="bemVindo">Welcome to my portifolio</p>
   <section class="introducao">
     <div class="lista">
       <h2>Dimitri_Freitas_Gomes_da_Silva</h2>
