mudei a logo para .png, mais um teste para ver se a logo aparece na page do github

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header class="header">
-    <img src="./img/logo.svg" alt="DimitriCreative" width="170" height="72">
+    <img src="./img/logo.png" alt="DimitriCreative" width="170" height="72">
     <nav class="navegacao">
       <ul>
         <li><a href="#projects">Projects</a></li>
