Mais conteudo adicionado,

--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
       <span>text by: Dimitri</span>
     </div>
   </section>
+  <section class="projetos">
+    <h1 class="subtitulo">Projects</h1>
+    <section class="projetos-inicio">
+      <h2>My academic projects</h2>
+      <p>These projects were made during the Origamid web designer course and my college.</p>
+      <nav class="nav">
+        <ul>
+          <li><a href="">Coruja</a></li>
+          <li><a href="">Wild Beast</a></li>
+          <li><a href="">Bik Craft v1</a></li>
+          <li><a class="em-breve" href="">Coming Soon</a></li>
+          <li><a href="">Flex Blog</a></li>
+          <li><a class="em-breve" href="">Coming Soon</a></li>
+        </ul>
+      </nav>
+    </section>
+
+  </section>
 </body>
 
 </html>
