mudança total de design

--- a/index.html
+++ b/index.html
@@ -15,52 +15,37 @@
 
 <body>
   <header class="header">
-    <img src="./img/logo.png" alt="DimitriCreative" width="170" height="72">
+    <img src="./img/logo.png" alt="DimitriCreative" width="182" height="82">
     <nav class="navegacao">
       <ul>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#aboutme">About-me</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#projects">Projetos</a></li>
+        <li><a href="#Formacao">Formação</a></li>
+        <li><a href="#contact">Contato</a></li>
       </ul>
     </nav>
   </header>
-  <p class="bemVindo">Welcome to my portifolio</p>
   <section class="introducao">
-    <div class="lista">
-      <h2>Dimitri_Freitas_Gomes_da_Silva</h2>
-      <ul>
-        <li>Age: 17 years</li>
-        <li>Nationality: brazilian</li>
-        <li>Region: São Roque - SP</li>
-        <li>Theme color: always dark;</li>
-        <li>IDE: VS code the best;</li>
-        <li>English: Basic</li>
-      </ul>
-    </div>
-    <div class="sobre">
-      <h1 class="subtitulo">About-me</h1>
-      <p>I am a young man who is coming professionally with an opportunity to join the Web Design field. And as a first project after studying so much HTML/CSS, nothing fairer than making a portfolio.</p>
-      <span>text by: Dimitri</span>
-    </div>
-  </section>
-  <section class="projetos">
-    <h1 class="subtitulo">Projects</h1>
-    <section class="projetos-inicio">
-      <h2>My academic projects</h2>
-      <p>These projects were made during the Origamid web designer course and my college.</p>
-      <nav class="nav">
+    <div class="content">
+      <div class="tabela">
+        <h3>Dimitri Freitas</h3>
         <ul>
-          <li><a href="">Coruja</a></li>
-          <li><a href="">Wild Beast</a></li>
-          <li><a href="">Bik Craft v1</a></li>
-          <li><a class="em-breve" href="">Coming Soon</a></li>
-          <li><a href="">Flex Blog</a></li>
-          <li><a class="em-breve" href="">Coming Soon</a></li>
+          <li>Idade: 17</li>
+          <li>Inglês: Básico</li>
+          <li>Nacionalidade: Brazileiro</li>
+          <li>Região: São Roque - SP</li>
+          <li>IDE: VS CODE</li>
+          <li>Estado ivil: Solteiro</li>
         </ul>
-      </nav>
-    </section>
-
+      </div>
+      <div class="sobre">
+        <h1>About-me</h1>
+        <p>
+          Sou um Desenvolvedor Front End & UX/UI Designer amador na busca da primeira oportunidade de emprego na aréa, este é meu primeiro projeto totalmente sozinho do zero, depois de estudar bastante sobre HTML/CSS.
+        </p>
+      </div>
+    </div>
   </section>
+
 </body>
 
 </html>
