fiz alguns detalhes da intrudução

--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
           <li>Nacionalidade: Brazileiro</li>
           <li>Região: São Roque - SP</li>
           <li>IDE: VS CODE</li>
-          <li>Estado ivil: Solteiro</li>
+          <li>Estado Civil: Solteiro</li>
         </ul>
       </div>
       <div class="sobre">
         <h1>About-me</h1>
-        <p>
-          Sou um Desenvolvedor Front End & UX/UI Designer amador na busca da primeira oportunidade de emprego na aréa, este é meu primeiro projeto totalmente sozinho do zero, depois de estudar bastante sobre HTML/CSS.
-        </p>
+        <p>Sou um Desenvolvedor Front End & UX/UI Designer amador na busca da primeira oportunidade de emprego na aréa, este é meu primeiro projeto totalmente sozinho do zero, depois de estudar bastante sobre HTML/CSS.</p>
+        <div class="sobre-dev">
+          <h2>Desenvolvedor Front End & UX/UI Designer</h2>
+          <p>Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs eu trabalhei no UX e UI Design do projeto.</p>
+        </div>
       </div>
     </div>
   </section>
