correção de background

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Dimitri-Creative</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -43,9 +43,14 @@
         <div class="sobre-dev">
           <h2>Desenvolvedor Front End & UX/UI Designer</h2>
           <p>Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs eu trabalhei no UX e UI Design do projeto.</p>
+          <span>Text by: Dimitri</span>
         </div>
       </div>
     </div>
+  </section>
+  <section>
+    <h1>Formação</h1>
+    <p>Minha mais recente experiência acadêmica foi a faculdade que fiz. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
   </section>
 
 </body>
