recomeço do projeto

--- a/index.html
+++ b/index.html
@@ -6,53 +6,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Dimitri-Creative</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header class="header">
-    <img src="./img/logo.png" alt="DimitriCreative" width="182" height="82">
+    <img src="img/Dimitri.png" alt="">
     <nav class="navegacao">
       <ul>
-        <li><a href="#projects">Projetos</a></li>
-        <li><a href="#Formacao">Formação</a></li>
-        <li><a href="#contact">Contato</a></li>
+        <li><a href="">Projetos</a></li>
+        <li><a href="">Experiencias</a></li>
+        <li><a href="">Educação</a></li>
       </ul>
     </nav>
   </header>
-  <section class="introducao">
-    <div class="content">
-      <div class="tabela">
-        <h3>Dimitri Freitas</h3>
-        <ul>
-          <li>Idade: 17</li>
-          <li>Inglês: Básico</li>
-          <li>Nacionalidade: Brazileiro</li>
-          <li>Região: São Roque - SP</li>
-          <li>IDE: VS CODE</li>
-          <li>Estado Civil: Solteiro</li>
-        </ul>
-      </div>
-      <div class="sobre">
-        <h1>About-me</h1>
-        <p>Sou um Desenvolvedor Front End & UX/UI Designer amador na busca da primeira oportunidade de emprego na aréa, este é meu primeiro projeto totalmente sozinho do zero, depois de estudar bastante sobre HTML/CSS.</p>
-        <div class="sobre-dev">
-          <h2>Desenvolvedor Front End & UX/UI Designer</h2>
-          <p>Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs eu trabalhei no UX e UI Design do projeto.</p>
-          <span>Text by: Dimitri</span>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section>
-    <h1>Formação</h1>
-    <p>Minha mais recente experiência acadêmica foi a faculdade que fiz. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
-  </section>
-
+  <main class="">
+    <article>
+      <h1>Desenvolvedor Front End & UX/UI Designer</h1>
+    </article>
+  </main>
 </body>
 
 </html>
