--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dimitri-Creative</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,10 +24,20 @@
       </ul>
     </nav>
   </header>
-  <main class="">
-    <article>
-      <h1>Desenvolvedor Front End & UX/UI Designer</h1>
+  <main class="container">
+    <article class="introducao-content">
+      <div>
+        <h1>Desenvolvedor Front End & UX/UI Designer</h1>
+        <footer class="redes-txt">
+          <a href="">Linkedin</a> • <a href="">Git-Hub</a>
+
+        </footer>
+      </div>
+      <div class="eu">
+        <img src="img/eu.png" alt="">
+      </div>
     </article>
+
   </main>
 </body>
 
