--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <img src="img/Dimitri.png" alt="">
     <nav class="navegacao">
       <ul>
-        <li><a href="">Projetos</a></li>
-        <li><a href="">Experiencias</a></li>
-        <li><a href="">Educação</a></li>
+        <li><a class="cor4" href="">Projetos</a></li>
+        <li><a class="cor4" href="">Experiencias</a></li>
+        <li><a class="cor4" href="">Educação</a></li>
       </ul>
     </nav>
   </header>
@@ -28,16 +28,16 @@
     <article class="introducao-content">
       <div>
         <h1>Desenvolvedor Front End & UX/UI Designer</h1>
-        <footer class="redes-txt">
-          <a href="">Linkedin</a> • <a href="">Git-Hub</a>
-
+        <footer class="redes-txt cor5">
+          <a class="cor5" href="">Linkedin</a> • <a class="cor5" href="">Git-Hub</a>
         </footer>
       </div>
-      <div class="eu">
-        <img src="img/eu.png" alt="">
-      </div>
+      <img src="img/eu.png" alt="">
     </article>
+    <section class="habilidades-content">
+      <h2 class="subtitulo">Habilidades e Técnologias</h2>
 
+    </section>
   </main>
 </body>
 
