--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
     </article>
     <section class="habilidades-content">
       <h2 class="subtitulo">Habilidades e Técnologias</h2>
-
+      <div class="habilidades-content-img">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+        <img src="/img/Group 68.png" alt="">
+      </div>
     </section>
   </main>
 </body>
