habilidades em andamentor efeiros hover a decidir

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 
 <head>
-  <link rel="shortcut icon" href="img/icon.png" type="image/png">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,19 +35,35 @@
     </article>
     <section class="habilidades-content">
       <h2 class="subtitulo">Habilidades e Técnologias</h2>
-      <div class="habilidades-content-img">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
-        <img src="/img/Group 68.png" alt="">
+      <div class="habilidades-content-skill">
+        <div>
+          <img src="/img/skills/html.png" alt=""></img>
+          <p>HTML</p>
+        </div>
+        <div>
+          <img src="/img/skills/css.png" alt="">
+          <p>CSS</p>
+        </div>
+        <div>
+          <img src="/img/skills/js.png" alt="javaScript">
+          <p>Javascript</p>
+        </div>
+        <div>
+          <img src="/img/skills/git.png" alt="Git">
+          <p>Git</p>
+        </div>
+        <div>
+          <img src="/img/skills/github.png" alt="Git-Hub">
+          <p>Git-Hub</p>
+        </div>
+        <div>
+          <img src="/img/skills/vscode.png" alt="Visual Studio Code">
+          <p>VSCode</p>
+        </div>
+        <div>
+          <img src="/img/skills/figma.png" alt="Figma">
+          <p>VSCode</p>
+        </div>
       </div>
     </section>
   </main>
