Sobre completo / Background a decidir

--- a/index.html
+++ b/index.html
@@ -17,55 +17,79 @@
     <img src="img/Dimitri.png" alt="">
     <nav class="navegacao">
       <ul>
-        <li><a class="cor4" href="">Projetos</a></li>
+        <li><a class="cor4" href="#pj">Projetos</a></li>
         <li><a class="cor4" href="">Experiencias</a></li>
         <li><a class="cor4" href="">Educação</a></li>
       </ul>
     </nav>
   </header>
   <main class="container">
-    <article class="introducao-content">
+    <section class="introducao-content">
       <div>
-        <h1>Desenvolvedor Front End & UX/UI Designer</h1>
+        <h1 class="cor4">Desenvolvedor Front End & UX/UI Designer</h1>
         <footer class="redes-txt cor5">
           <a class="cor5" href="">Linkedin</a> • <a class="cor5" href="">Git-Hub</a>
         </footer>
       </div>
       <img src="img/eu.png" alt="">
-    </article>
+    </section>
+    <section class="sobre-content">
+      <h2 class="subtitulo">Sobre<br> Mim</h2>
+      <div class="sobre-txt">
+        <p class="cor5"><strong class="cor4">Olá,</strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus tristique, posuere erat ut, pharetra turpis. Vestibulum sed est vel nisl bibendum congue. Vivamus a iaculis ligula, at euismod dolor. Suspendisse a ex tempor, vestibulum odio vitae, mollis felis. Integer in consectetur nisl. Sed eget nulla placerat, molestie enim sit amet, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus tristique, posuere erat ut, pharetra turpis. Vestibulum sed est vel nisl bibendum congue. Vivamus a iaculis ligula, at euismod dolor. Suspendisse a ex tempor, vestibulum odio vitae, mollis felis. Integer in consectetur nisl. Sed eget nulla placerat, molestie enim sit amet.</p>
+        <div class=" btn-bio">
+          <a class="cor4" href="#">Certificados</a>
+          <a class="cor4" href="#">Currículo</a>
+        </div>
+      </div>
+    </section>
     <section class="habilidades-content">
       <h2 class="subtitulo">Habilidades e Técnologias</h2>
       <div class="habilidades-content-skill">
         <div>
           <img src="/img/skills/html.png" alt=""></img>
-          <p>HTML</p>
+          <p class="cor4">HTML</p>
         </div>
         <div>
           <img src="/img/skills/css.png" alt="">
-          <p>CSS</p>
+          <p class="cor4">CSS</p>
         </div>
         <div>
           <img src="/img/skills/js.png" alt="javaScript">
-          <p>Javascript</p>
+          <p class="cor4">Javascript</p>
         </div>
         <div>
           <img src="/img/skills/git.png" alt="Git">
-          <p>Git</p>
+          <p class="cor4">Git</p>
         </div>
         <div>
           <img src="/img/skills/github.png" alt="Git-Hub">
-          <p>Git-Hub</p>
+          <p class="cor4">Git-Hub</p>
         </div>
         <div>
           <img src="/img/skills/vscode.png" alt="Visual Studio Code">
-          <p>VSCode</p>
+          <p class="cor4">VSCode</p>
         </div>
         <div>
           <img src="/img/skills/figma.png" alt="Figma">
-          <p>VSCode</p>
+          <p class="cor4">VSCode</p>
         </div>
       </div>
     </section>
+
+    <!-- <section id="pj" class="projetos-content">
+      <h2 class="subtitulo">Projetos e Desafios</h2>
+      <div class="projeto">
+        <h3 class="cor4">Coruja</h3>
+        <p class="cor5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus tristique, posuere erat ut, pharetra turpis. Vestibulum sed est vel nisl bibendum congue. Vivamus a iaculis ligula, at euismod dolor</p>
+        <ul>
+          <li>html</li>
+          <li>css</li>
+          <li>javascript</li>
+        </ul>
+      </div>
+    </section> -->
+
   </main>
 </body>
 
