começo de projetos e desafios

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2 class="subtitulo">Habilidades e Técnologias</h2>
       <div class="habilidades-content-skill">
         <div>
-          <img src="/img/skills/html.png" alt=""></img>
+          <img src="/img/skills/html.png" alt="">
           <p class="cor4">HTML</p>
         </div>
         <div>
@@ -77,18 +77,33 @@
       </div>
     </section>
 
-    <!-- <section id="pj" class="projetos-content">
+    <section id="pj" class="projetos-content">
       <h2 class="subtitulo">Projetos e Desafios</h2>
-      <div class="projeto">
-        <h3 class="cor4">Coruja</h3>
-        <p class="cor5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus tristique, posuere erat ut, pharetra turpis. Vestibulum sed est vel nisl bibendum congue. Vivamus a iaculis ligula, at euismod dolor</p>
-        <ul>
-          <li>html</li>
-          <li>css</li>
-          <li>javascript</li>
-        </ul>
+      <div class="projetos">
+        <a href="">
+          <div class="projeto">
+            <h3 class="cor4">Coruja</h3>
+            <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
+            <ul class="cor4">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Javascript</li>
+            </ul>
+          </div>
+        </a>
+        <a href="">
+          <div class="projeto">
+            <h3 class="cor4">Coruja</h3>
+            <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
+            <ul class="cor4">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Javascript</li>
+            </ul>
+          </div>
+        </a>
       </div>
-    </section> -->
+    </section>
 
   </main>
 </body>
