projetos e desafios completo

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <div class="sobre-txt">
         <p class="cor5"><strong class="cor4">Olá,</strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus tristique, posuere erat ut, pharetra turpis. Vestibulum sed est vel nisl bibendum congue. Vivamus a iaculis ligula, at euismod dolor. Suspendisse a ex tempor, vestibulum odio vitae, mollis felis. Integer in consectetur nisl. Sed eget nulla placerat, molestie enim sit amet, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus tristique, posuere erat ut, pharetra turpis. Vestibulum sed est vel nisl bibendum congue. Vivamus a iaculis ligula, at euismod dolor. Suspendisse a ex tempor, vestibulum odio vitae, mollis felis. Integer in consectetur nisl. Sed eget nulla placerat, molestie enim sit amet.</p>
         <div class=" btn-bio">
-          <a class="cor4" href="#">Certificados</a>
-          <a class="cor4" href="#">Currículo</a>
+          <a class="btn cor4" href="#">Certificados</a>
+          <a class="btn cor4" href="#">Currículo</a>
         </div>
       </div>
     </section>
@@ -80,29 +80,67 @@
     <section id="pj" class="projetos-content">
       <h2 class="subtitulo">Projetos e Desafios</h2>
       <div class="projetos">
-        <a href="">
-          <div class="projeto">
-            <h3 class="cor4">Coruja</h3>
-            <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
-            <ul class="cor4">
-              <li>HTML</li>
+        <div class="projeto">
+          <h3 class="cor4">ProjetoBorboletas</h3>
+          <p class="cor5">Este foi o Projeto Integrador de minha faculdade onde em conjunto de outros integrantes, o objetivo era fazer um site com menos de 2Mb.</p>
+          <div class="linguagens-projetos">
+            <ul class="cor5">
+              <li>HTML</li>•
               <li>CSS</li>
+            </ul>
+            <div>
+              <a class="cor4 btn" href="">Demo</a>
+              <a class="cor4 btn" href="">Repositório</a>
+            </div>
+          </div>
+        </div>
+        <div class="projeto">
+          <h3 class="cor4">Challenge1Alura</h3>
+          <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
+          <div class="linguagens-projetos">
+            <ul class="cor5">
+              <li>HTML</li>•
+              <li>CSS</li>•
               <li>Javascript</li>
             </ul>
+            <div>
+              <a class="cor4 btn" href="">Demo</a>
+              <a class="cor4 btn" href="">Repositório</a>
+            </div>
           </div>
-        </a>
-        <a href="">
-          <div class="projeto">
-            <h3 class="cor4">Coruja</h3>
-            <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
-            <ul class="cor4">
-              <li>HTML</li>
-              <li>CSS</li>
+        </div>
+        <div class="projeto">
+          <h3 class="cor4">ProjetoBorboletas</h3>
+          <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
+          <div class="linguagens-projetos">
+            <ul class="cor5">
+              <li>HTML</li>•
+              <li>CSS</li>•
               <li>Javascript</li>
             </ul>
+            <div>
+              <a class="cor4 btn" href="">Demo</a>
+              <a class="cor4 btn" href="">Repositório</a>
+            </div>
           </div>
-        </a>
+        </div>
+        <div class="projeto">
+          <h3 class="cor4">ProjetoBorboletas</h3>
+          <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
+          <div class="linguagens-projetos">
+            <ul class="cor5">
+              <li>HTML</li>•
+              <li>CSS</li>•
+              <li>Javascript</li>
+            </ul>
+            <div>
+              <a class="cor4 btn" href="">Demo</a>
+              <a class="cor4 btn" href="">Repositório</a>
+            </div>
+          </div>
+        </div>
       </div>
+
     </section>
 
   </main>
