--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav class="navegacao">
       <ul>
         <li><a class="cor4" href="#pj">Projetos</a></li>
-        <li><a class="cor4" href="">Experiencias</a></li>
-        <li><a class="cor4" href="">Educação</a></li>
+        <li><a class="cor4" href="#form">Formação</a></li>
+        <li><a class="cor4" href="">Experiencia</a></li>
       </ul>
     </nav>
   </header>
@@ -140,7 +140,36 @@
           </div>
         </div>
       </div>
+    </section>
 
+    <section id="form">
+      <h2 class="subtitulo">Formação e Cursos</h2>
+      <div class="formacao-container">
+        <div>
+          <img src="/img/educ/logo.png" alt="" width="150">
+          <h3 class="cor5">Programa ONE - Oracle Next Education</h3>
+          <p class="cor10">Em andamento - Fatec São Roque</p>
+        </div>
+        <div>
+          <img src="/img/educ/origamid.png" alt="" width="150">
+          <h3 class="cor5">Web Design, UX/UI Design, HTML, CSS, JavaScript e React</h3>
+          <p class="cor10">Em andamento - Origamid</p>
+        </div>
+        <div>
+          <img src="/img/educ/cc50.png" alt="" width="110">
+          <h3 class="cor5">Ciência da Computação 50 - Harvard</h3>
+          <p class="cor10">Em andamento - Fundação Estudar</p>
+        </div>
+        <div>
+          <img src="/img/educ/AluraOne.png" alt="">
+          <h3 class="cor5">Programa ONE - Oracle Next Education</h3>
+          <p class="cor10">Em andamento - Alura</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="experiencia" id="exp">
+      <h2 class="subtitulo">Experiencia Profissional</h2>
     </section>
 
   </main>
