--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a class="cor4" href="#pj">Projetos</a></li>
         <li><a class="cor4" href="#form">Formação</a></li>
-        <li><a class="cor4" href="">Experiencia</a></li>
+        <li><a class="cor4" href="#contact">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -142,12 +142,12 @@
       </div>
     </section>
 
-    <section id="form">
+    <section class="formacao" id="form">
       <h2 class="subtitulo">Formação e Cursos</h2>
       <div class="formacao-container">
         <div>
           <img src="/img/educ/logo.png" alt="" width="150">
-          <h3 class="cor5">Programa ONE - Oracle Next Education</h3>
+          <h3 class="cor5">Faculdade de Tecnologia de São Roque</h3>
           <p class="cor10">Em andamento - Fatec São Roque</p>
         </div>
         <div>
@@ -170,6 +170,9 @@
 
     <section class="experiencia" id="exp">
       <h2 class="subtitulo">Experiencia Profissional</h2>
+      <div>
+        <p class="cor4">Estância Supermercados </p><span class="cor10">/ 1 e 5 meses</span>
+      </div>
     </section>
 
   </main>
