começo do responsivo

--- a/index.html
+++ b/index.html
@@ -176,6 +176,28 @@
     </section>
 
   </main>
+  <section class="contato" id="contact">
+    <img src="img/contato-img.png" alt="">
+    <div class="contato-form">
+      <h3 class="cor4">Contato</h3>
+      <form>
+        <label class="cor4" for="nome">Nome:</label>
+        <input class="cor4" type="text" id="nome" name="nome" required>
+
+        <label class="cor4" for="email">E-mail:</label>
+        <input class="cor4" type="email" id="email" name="email" required>
+
+        <label class="cor4" for="telefone">Telefone:</label>
+        <input class="cor4" type="text" id="telefone" name="telefone">
+
+        <label class="cor4" for="mensagem">Mensagem:</label>
+        <textarea class="cor4" id="mensagem" name="mensagem" required></textarea>
+      </form>
+    </div>
+  </section>
+  <footer class="footer">
+    <p class="cor4">Dimitri 2022 &copy; Alguns direitos reservados</p>
+  </footer>
 </body>
 
 </html>
