ainda em processo

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
       <h2 class="subtitulo">Habilidades e Técnologias</h2>
       <div class="habilidades-content-skill">
         <div>
-          <img src="/img/skills/html.png" alt="">
+          <img src="/img/skills/html.png" alt="HTML">
           <p class="cor4">HTML</p>
         </div>
         <div>
-          <img src="/img/skills/css.png" alt="">
+          <img src="/img/skills/css.png" alt="CSS">
           <p class="cor4">CSS</p>
         </div>
         <div>
