Correção de erros

--- a/index.html
+++ b/index.html
@@ -47,31 +47,31 @@
       <h2 class="subtitulo">Habilidades e Técnologias</h2>
       <div class="habilidades-content-skill">
         <div>
-          <img src="/img/skills/html.png" alt="HTML">
+          <img src="img/skills/html.png" alt="HTML">
           <p class="cor4">HTML</p>
         </div>
         <div>
-          <img src="/img/skills/css.png" alt="CSS">
+          <img src="img/skills/css.png" alt="CSS">
           <p class="cor4">CSS</p>
         </div>
         <div>
-          <img src="/img/skills/js.png" alt="javaScript">
+          <img src="img/skills/js.png" alt="javaScript">
           <p class="cor4">Javascript</p>
         </div>
         <div>
-          <img src="/img/skills/git.png" alt="Git">
+          <img src="img/skills/git.png" alt="Git">
           <p class="cor4">Git</p>
         </div>
         <div>
-          <img src="/img/skills/github.png" alt="Git-Hub">
+          <img src="img/skills/github.png" alt="Git-Hub">
           <p class="cor4">Git-Hub</p>
         </div>
         <div>
-          <img src="/img/skills/vscode.png" alt="Visual Studio Code">
+          <img src="img/skills/vscode.png" alt="Visual Studio Code">
           <p class="cor4">VSCode</p>
         </div>
         <div>
-          <img src="/img/skills/figma.png" alt="Figma">
+          <img src="img/skills/figma.png" alt="Figma">
           <p class="cor4">VSCode</p>
         </div>
       </div>
@@ -146,22 +146,22 @@
       <h2 class="subtitulo">Formação e Cursos</h2>
       <div class="formacao-container">
         <div>
-          <img src="/img/educ/logo.png" alt="" width="150">
+          <img src="img/educ/logo.png" alt="" width="150">
           <h3 class="cor5">Faculdade de Tecnologia de São Roque</h3>
           <p class="cor10">Em andamento - Fatec São Roque</p>
         </div>
         <div>
-          <img src="/img/educ/origamid.png" alt="" width="150">
+          <img src="img/educ/origamid.png" alt="" width="150">
           <h3 class="cor5">Web Design, UX/UI Design, HTML, CSS, JavaScript e React</h3>
           <p class="cor10">Em andamento - Origamid</p>
         </div>
         <div>
-          <img src="/img/educ/cc50.png" alt="" width="110">
+          <img src="img/educ/cc50.png" alt="" width="110">
           <h3 class="cor5">Ciência da Computação 50 - Harvard</h3>
           <p class="cor10">Em andamento - Fundação Estudar</p>
         </div>
         <div>
-          <img src="/img/educ/AluraOne.png" alt="">
+          <img src="img/educ/AluraOne.png" alt="">
           <h3 class="cor5">Programa ONE - Oracle Next Education</h3>
           <p class="cor10">Em andamento - Alura</p>
         </div>
