--- a/index.html
+++ b/index.html
@@ -89,14 +89,28 @@
               <li>CSS</li>
             </ul>
             <div>
-              <a class="cor4 btn" href="">Demo</a>
-              <a class="cor4 btn" href="">Repositório</a>
+              <a class="cor4 btn" href="https://dimitri13freitas.github.io/ProjetoBorboletas/">Demo</a>
+              <a class="cor4 btn" href="https://github.com/Dimitri13Freitas/ProjetoBorboletas">Repositório</a>
+            </div>
+          </div>
+        </div>
+        <div class="projeto">
+          <h3 class="cor4">Coruja</h3>
+          <p class="cor5">Desafio pessoal com o intuito de colocar a mão na maasa com html e css com fco maior no responsivo usando grid layout e flexbox.</p>
+          <div class="linguagens-projetos">
+            <ul class="cor5">
+              <li>HTML</li>•
+              <li>CSS</li>
+            </ul>
+            <div>
+              <a class="cor4 btn" href="https://dimitri13freitas.github.io/DarkMode/">Demo</a>
+              <a class="cor4 btn" href="https://github.com/Dimitri13Freitas/DarkMode">Repositório</a>
             </div>
           </div>
         </div>
         <div class="projeto">
           <h3 class="cor4">Challenge1Alura</h3>
-          <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
+          <p class="cor5">Decodificador de textos que foi proposto como desafio para ser desenvolvido pela alura junto da ONE.</p>
           <div class="linguagens-projetos">
             <ul class="cor5">
               <li>HTML</li>•
@@ -104,14 +118,14 @@
               <li>Javascript</li>
             </ul>
             <div>
-              <a class="cor4 btn" href="">Demo</a>
-              <a class="cor4 btn" href="">Repositório</a>
+              <a class="cor4 btn" href="https://dimitri13freitas.github.io/Challenge1Alura/">Demo</a>
+              <a class="cor4 btn" href="https://github.com/Dimitri13Freitas/Challenge1Alura">Repositório</a>
             </div>
           </div>
         </div>
         <div class="projeto">
-          <h3 class="cor4">ProjetoBorboletas</h3>
-          <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
+          <h3 class="cor4">Challenge2Alura</h3>
+          <p class="cor5">Jogo da Forca mais um desafio proposto pela alura junto da ONE, desenvolver um jogo da forca para web.</p>
           <div class="linguagens-projetos">
             <ul class="cor5">
               <li>HTML</li>•
@@ -119,14 +133,14 @@
               <li>Javascript</li>
             </ul>
             <div>
-              <a class="cor4 btn" href="">Demo</a>
-              <a class="cor4 btn" href="">Repositório</a>
+              <a class="cor4 btn" href="https://dimitri13freitas.github.io/Challenge2Alura/">Demo</a>
+              <a class="cor4 btn" href="https://github.com/Dimitri13Freitas/Challenge2Alura">Repositório</a>
             </div>
           </div>
         </div>
         <div class="projeto">
-          <h3 class="cor4">ProjetoBorboletas</h3>
-          <p class="cor5">Projeto onde pude colocar minhas habilidades HTML/CSS a prova com objetivo maior no responsivo</p>
+          <h3 class="cor4">DarkMode</h3>
+          <p class="cor5">Desafio pessoal onde o propósito foi colocar a prova minhas habilidades com javascript CSS e HTML sem auxilio de ninguém.</p>
           <div class="linguagens-projetos">
             <ul class="cor5">
               <li>HTML</li>•
@@ -134,8 +148,23 @@
               <li>Javascript</li>
             </ul>
             <div>
-              <a class="cor4 btn" href="">Demo</a>
-              <a class="cor4 btn" href="">Repositório</a>
+              <a class="cor4 btn" href="https://dimitri13freitas.github.io/DarkMode/">Demo</a>
+              <a class="cor4 btn" href="https://github.com/Dimitri13Freitas/DarkMode">Repositório</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="projeto">
+          <h3 class="cor4">BikCraftv2</h3>
+          <p class="cor5">Este é um projeto do curso Origamid que estou fazendo, um e-commerce de bicicletas ficticio, com HTML, CSS e Javascript.</p>
+          <div class="linguagens-projetos">
+            <ul class="cor5">
+              <li>HTML</li>•
+              <li>CSS</li>•
+              <li>Javascript</li>
+            </ul>
+            <div>
+              <a class="cor4 btn" href="https://github.com/Dimitri13Freitas/BikCraftv2">Repositório</a>
             </div>
           </div>
         </div>
